--- a/cmd/play/assets/index.html
+++ b/cmd/play/assets/index.html
@@ -32,7 +32,7 @@
     }
 
     var versionsFunc = function(lineage) {
-        var result = linVersions(lineage, '0.0', data)
+        var result = linVersions(lineage, '0.0', '')
         console.log("Result ", result)
     }
 </script>
